// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User API Can paginate users 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 2,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
  "users": Array [],
}
`;

exports[`User API Can paginate users 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "100",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can request all users ordered by id 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:48.000Z",
      "donation_notifications": true,
      "email": "inactive@test.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "name",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "inactive",
      "status": "inactive",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:48.000Z",
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:46.000Z",
      "donation_notifications": true,
      "email": "supersuper@ghost.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Super Editor",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "super-editor",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:46.000Z",
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:46.000Z",
      "donation_notifications": true,
      "email": "contributor@ghost.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Contributor",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "contributor",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:46.000Z",
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:46.000Z",
      "donation_notifications": true,
      "email": "smcectoplasm@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Slimer McEctoplasm",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "slimer-mcectoplasm",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:46.000Z",
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:46.000Z",
      "donation_notifications": true,
      "email": "jbOgendAth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Jimothy Bogendath",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "jimothy-bogendath",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:46.000Z",
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:46.000Z",
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:46.000Z",
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "You can delete this user to remove all the welcome posts",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:46.000Z",
      "donation_notifications": true,
      "email": "ghost-author@example.com",
      "facebook": "ghost",
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": null,
      "linkedin": null,
      "location": "The Internet",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Ghost",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": "https://static.ghost.org/v4.0.0/images/ghost-user.png",
      "recommendation_notifications": true,
      "slug": "ghost",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": "ghost",
      "updated_at": "2025-08-18T21:32:46.000Z",
      "url": "http://127.0.0.1:2369/author/ghost/",
      "website": "https://ghost.org",
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": "2025-08-18T21:32:48.000Z",
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": "2025-08-18T21:32:48.000Z",
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": "2025-08-18T21:32:48.000Z",
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can request all users ordered by id 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "7124",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
